Updates files on playing around with css
Honestly bothers me a bit that 2 years ago I was SO MUCH more proficient in
CSS//HTML buut I'm back to basic and doing it without following along so
just have to be patient with the process as I know taking time on the foundations will
pay off!

--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ p {
 /* Classes */
 
 .recipes {
+  background-color: rgb(249, 192, 238);
   text-align: center;
   height: 50px;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
@@ -32,4 +33,9 @@ p {
 .images {
   height: 300px;
   width: auto;
+}
+
+.button {
+  background-color: rgb(108, 229, 132);
+  border-radius: 5px;
 }
