--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,3 @@
-* {
-  background-color: rgb(224, 224, 151);
-}
-
 /* Type selectors */
 h1 {
   text-align: center;
@@ -9,21 +5,35 @@ h1 {
   font-size: 42px;
 }
 
-a:hover {
-  border-bottom: 1px solid black;
-}
-
 p {
   text-align: center;
+  margin: auto;
+  width: 50%;
+  padding: 10px;
 }
 
 /* Classes */
 
 .recipes {
-  background-color: rgb(249, 192, 238);
+  background-color: rgb(155, 214, 149);
+  border: 4px solid rgb(250, 250, 166);
   text-align: center;
-  height: 50px;
+  height: 50px 0;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  padding: 10px;
+  margin: auto;
+}
+
+.centre {
+  margin: auto;
+  width: 50%;
+  border-radius: 40px;
+}
+
+.centre2 {
+  margin: auto;
+  width: 65%;
+  border-radius: 40px;
 }
 
 .ingredients {
@@ -31,11 +41,32 @@ p {
 }
 
 .images {
-  height: 300px;
+  height: 400px;
   width: auto;
+  border-radius: 20px;
 }
 
 .button {
-  background-color: rgb(108, 229, 132);
-  border-radius: 5px;
+  background-color: rgb(180, 180, 180);
+  border-radius: 10px;
+}
+
+.button a {
+  color: black;
+  font-weight: 800;
+}
+
+/* experimental*/
+
+a:link {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+  color: rgb(255, 255, 255);
 }
